--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
+    "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tanstack/eslint-plugin-query": "^5.81.2",
     "@types/lodash": "^4.17.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
